--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -952,6 +952,9 @@ body {
 				.collapse.nav-collapse {
 					visibility: visible;
 					display: block;
+					.dropdown-menu {
+						position: absolute !important;
+					}
 				}
 				.nav-account-controls {
 					position: relative !important;
@@ -1004,10 +1007,22 @@ body {
 			right: 15px;
 		}
 	}
-	#_145_navAccountControlsNavbarCollapse {
+	.navAccountControlsDivClass {
 		background-color: $darkblue;
+		height: 37px;
+		#_145_adminLinks, #_145_mySites, #_145_systemDropdown {
+			.dropdown-menu li a {
+				padding: 0px 15px !important;
+				&:hover {
+					background-color: $navydarkblue;
+				}
+			}
+		}
+	}
+	#_145_navAccountControlsNavbarCollapse {
 		margin: 0 auto !important;
-		max-width: 1200px !important;
+		left: 0px;
+		right: 0px;
 		> .nav.nav-account-controls > li:nth-last-child(3) {
 			margin-right: 18px;
 			&:after {
@@ -1308,9 +1323,6 @@ body {
 #_145_navAccountControlsNavbarCollapse > .nav-account-controls > li.admin-links .dropdown-menu li, 
 #_145_navAccountControlsNavbarCollapse > .nav-account-controls > li.my-sites .dropdown-menu li {
 	float: none !important;
-	a {
-		padding: 0 15px !important;
-	}
 }
 .portlet-column {
 	margin: 0 !important;
@@ -1547,7 +1559,7 @@ body {
 
 @media (min-width: 0px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 300px;
 			float: none !important;
 		}
@@ -1756,7 +1768,7 @@ body {
 
 @media (min-width: 480px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 460px;
 			float: none !important;
 		}
@@ -1848,7 +1860,7 @@ body {
 
 @media (min-width: 640px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 620px;
 			float: none !important;
 		}
@@ -1913,7 +1925,7 @@ body {
 
 @media (min-width: 768px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 750px;
 			float: none !important;
 		}
@@ -2011,7 +2023,7 @@ body {
 }
 @media (min-width: 980px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 940px;
 		}
 		#column-2.portlet-column-first.span4 {
@@ -2076,7 +2088,7 @@ body {
 }
 @media (min-width: 992px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 940px;
 		}
 		#_145_navAddControlsNavbarCollapse {
@@ -2142,7 +2154,7 @@ body {
 
 @media (min-width: 1200px) {
 	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
+		.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
 			width: 1200px;
 		}
 		#navigation .navbar-inner {
