--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -1012,12 +1012,15 @@ body {
 		height: 37px;
 		#_145_adminLinks, #_145_mySites, #_145_systemDropdown {
 			&.open {
-				.dropdown-menu li a {
-					padding: 0px 10px !important;
-					line-height: 34px !important;
-					height: 34px;
-					&:hover {
-						background-color: $darkblue !important;
+				.dropdown-menu li {
+					width: 100% !important;
+					a {
+						padding: 0px 10px !important;
+						line-height: 34px !important;
+						height: 34px;
+						&:hover {
+							background-color: $darkblue !important;
+						}
 					}
 				}
 			}
