--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -1056,6 +1056,7 @@ body {
 	#_145_navAccountControls {
 		margin-top: 0 !important;
 		top: 0 !important;
+		height: 37px;
 	}
 	#_145_navSiteNavigationNavbarBtn,
 	#_145_navAccountControlsNavbarBtn,
