--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -1056,6 +1056,7 @@ body {
 	#_145_navAccountControls {
 		margin-top: 0 !important;
 		top: 0 !important;
+		height: 37px;
 	}
 	#_145_navSiteNavigationNavbarBtn,
 	#_145_navAccountControlsNavbarBtn,
@@ -2270,7 +2271,6 @@ body {
 			border: 0;
 			margin: 0 !important;
 			padding: 7px 14px !important;
-			z-index: 999;
 			&.open {
 				background: #F5AF45;
 			}
