--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -1945,6 +1945,9 @@ body {
 			width: 750px;
 			float: none !important;
 		}
+		.alert-danger, .alert-error, .portlet-msg-error {
+			font-size: 17px;
+		}
 		.category {
 			.col-sm-12 {
 				a {
