--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -8,7 +8,6 @@
   <title>$the_title - $company_name</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
-  <link href="${theme_display.getPathThemeCss()}/bootstrap.css" rel="stylesheet" type="text/css" />
 
   $theme.include($top_head_include)
 </head>
@@ -87,8 +86,8 @@ $theme.include($body_top_include)
     </div>
   </footer>
 
-<script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/jquery.js"></script>
-<script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/carousel.js"></script>
 
 <script>
     $(function() {
