--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -1872,6 +1872,7 @@ p {
 		.navbar > .container > #navbar {
 			height: auto;
 			float: right;
+			min-height: 100px;
 		}
 		.carousel {
 			.carousel-title {
