--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -1083,6 +1083,27 @@ p {
 	#_145_navAddControlsNavbarBtn {
 		display: none !important;
 	}
+	#_145_systemDropdown {
+		a {
+			padding-right: 27px !important;
+		}
+		.icon-caret-down {
+			background: transparent;
+			margin-left: 0px;
+			margin-right: -7px;
+			position: relative;
+			&:before {
+				content: "" !important;
+				background: url("@theme_image_path@/custom/lock.png") no-repeat 0 0;
+				width: 10px;
+				height: 14px;
+				display: block;
+				position: absolute;
+				top: -13px;
+				right: -8px;
+			}
+		}
+	}
 	.navbar-header .navbar-brand {
 		height: auto !important;
 		position: relative;
