--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -84,7 +84,7 @@
 			margin-top: 40px;
 		}
 		.open > .dropdown-menu {
-			box-shadow: 0px 5px 9px -8px #333 !important;
+			box-shadow: 0 10px 25px -11px #333 !important;
 		}
 		.site-navigation.open {
 			top: 30px;
