--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -118,19 +118,28 @@
 		}
 		.dockbar .nav li.dropdown .dropdown-menu, 
 		.dockbar .nav li.dropdown .site-administration-menu,
-		.dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:hover, 
+		.dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:hover,
+        .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:focus, 
 		.dockbar-split .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:hover,
+        .dockbar-split .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:focus,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown:hover,
+        .dockbar .navbar-inner .nav > li.user-avatar.dropdown:focus,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown.open > a,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown a:hover,
+        .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:focus,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown .dropdown-menu,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown:hover,
+        .dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown:focus,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown.open > a,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:hover,
+        .dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:focus,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown .dropdown-menu,
-		.navAccountControlsDivClass #_145_adminLinks.open .dropdown-menu li a:hover, 
-		.navAccountControlsDivClass #_145_mySites.open .dropdown-menu li a:hover, 
-		.navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:hover,
+		.navAccountControlsDivClass #_145_adminLinks.open .dropdown-menu li a:hover,
+        .navAccountControlsDivClass #_145_adminLinks.open .dropdown-menu li a:focus,
+		.navAccountControlsDivClass #_145_mySites.open .dropdown-menu li a:hover,
+        .navAccountControlsDivClass #_145_mySites.open .dropdown-menu li a:focus,
+        .navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:hover,
+        .navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:focus,
 		li#_145_userAvatar.user-avatar.dropdown.dockbar-item ul.dropdown-menu {
 			background-color: rgba(255, 255, 255, 0.97) !important;
 		}
