--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -64,7 +64,7 @@
 		.navbar-header {
 			width: 100px;
 			margin: 0 auto !important;
-			height: 50px;
+			height: 35px;
 			top: -50px;
 			position: absolute;
 			z-index: 1032;
@@ -84,7 +84,7 @@
 			margin-top: 40px;
 		}
 		.open > .dropdown-menu {
-			box-shadow: 0 10px 25px -11px #333 !important;
+			box-shadow: 0px 13px 19px -11px rgb(51, 51, 51) !important;
 		}
 		.site-navigation.open {
 			top: 30px;
