--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -119,27 +119,27 @@
 		.dockbar .nav li.dropdown .dropdown-menu, 
 		.dockbar .nav li.dropdown .site-administration-menu,
 		.dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:hover,
-        .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:focus, 
+		.dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:focus, 
 		.dockbar-split .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:hover,
-        .dockbar-split .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:focus,
+		.dockbar-split .dockbar .navbar-inner .nav #_145_loginDropdown.dropdown a.dropdown-toggle:focus,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown:hover,
-        .dockbar .navbar-inner .nav > li.user-avatar.dropdown:focus,
+		.dockbar .navbar-inner .nav > li.user-avatar.dropdown:focus,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown.open > a,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown a:hover,
-        .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:focus,
+		.dockbar .navbar-inner .nav > li.user-avatar.dropdown a:focus,
 		.dockbar .navbar-inner .nav > li.user-avatar.dropdown .dropdown-menu,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown:hover,
-        .dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown:focus,
+		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown:focus,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown.open > a,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:hover,
-        .dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:focus,
+		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:focus,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown .dropdown-menu,
 		.navAccountControlsDivClass #_145_adminLinks.open .dropdown-menu li a:hover,
-        .navAccountControlsDivClass #_145_adminLinks.open .dropdown-menu li a:focus,
+		.navAccountControlsDivClass #_145_adminLinks.open .dropdown-menu li a:focus,
 		.navAccountControlsDivClass #_145_mySites.open .dropdown-menu li a:hover,
-        .navAccountControlsDivClass #_145_mySites.open .dropdown-menu li a:focus,
-        .navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:hover,
-        .navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:focus,
+		.navAccountControlsDivClass #_145_mySites.open .dropdown-menu li a:focus,
+		.navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:hover,
+		.navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:focus,
 		li#_145_userAvatar.user-avatar.dropdown.dockbar-item ul.dropdown-menu {
 			background-color: rgba(255, 255, 255, 0.97) !important;
 		}
@@ -149,10 +149,10 @@
 		.navAccountControlsDivClass #_145_systemDropdown.open .dropdown-menu li a:hover,
 		.dockbar-split .dockbar .navbar-inner .nav > li.user-avatar.dropdown a:hover,
 		li#_145_userAvatar.user-avatar.dropdown.dockbar-item.open a.user-avatar-link.dropdown-toggle,
-        .dockbar-split .dockbar .navbar-inner .nav-collapse > .nav > li > a:focus,
-        .dockbar-split .dockbar .navbar-inner .nav-collapse > .nav > li > a:hover,
-        .dockbar .navbar-inner .nav-collapse > .nav > li > a:focus,
-        .dockbar .navbar-inner .nav-collapse > .nav > li > a:hover {
+		.dockbar-split .dockbar .navbar-inner .nav-collapse > .nav > li > a:focus,
+		.dockbar-split .dockbar .navbar-inner .nav-collapse > .nav > li > a:hover,
+		.dockbar .navbar-inner .nav-collapse > .nav > li > a:focus,
+		.dockbar .navbar-inner .nav-collapse > .nav > li > a:hover {
 			background-color: rgba(255, 255, 255, 0.63) !important;
 		}
 		.dockbar .navbar-inner div.navAccountControlsDivClass ul.nav #_145_loginDropdown, 
@@ -191,23 +191,25 @@
 			background-color: #474B4C !important;
 			color: #fff !important;
 		}
-        #_145_searchDropdown > .dropdown-menu {
-            margin-left: -361px !important;
-        }
-        @media (min-width: 1200px) {
-            body {
-                margin-bottom: 87px !important;
-            }
-            .container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
-                width: auto !important;
-            }
-            #navigation, .footer {
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-            .carousel.slide .item img {
-                width: 100%;
-            }
-        }
+		#_145_searchDropdown > .dropdown-menu {
+			margin-left: -361px !important;
+		}
+	}
+	@media (min-width: 1200px) {
+		body.white {
+			margin-bottom: 87px !important;
+		}
+		.white {
+			.container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
+			   width: auto !important;
+			}
+			#navigation, .footer {
+				padding-left: 20px;
+				padding-right: 20px;
+			}
+			.carousel.slide .item img {
+				width: 100%;
+			}
+		}
 	}
 }
