--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -191,11 +191,14 @@
 			background-color: #474B4C !important;
 			color: #fff !important;
 		}
+        #_145_navSiteNavigationNavbarBtn {
+            margin-right: 20px !important;
+        }
 		#_145_searchDropdown > .dropdown-menu {
 			margin-left: -361px !important;
 		}
 	}
-	@media (min-width: 320px) {
+	@media (min-width: 0px) {
 		body.white {
 			margin-bottom: 87px !important;
 		}
@@ -206,9 +209,6 @@
 			#navigation, .footer {
 				padding-left: 20px;
 				padding-right: 20px;
-			}
-			.carousel.slide .item img {
-				width: 100%;
 			}
 		}
 	}
