--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -213,16 +213,34 @@
 			.carousel.slide .item img {
 				margin-left: -170px;
 			}
+            .carousel-title, .carousel-text {
+                margin-left: 150px !important;
+            }
 		}
 	}
 	@media (max-width: 479px) {
 		.white .navbar .container {
-			margin-top: 105px;
+			height: 100px;
 		}
+        .white #_145_searchDropdown {
+            width: 30px !important;
+        }
+        .white #_145_searchDropdown > .dropdown-menu {
+            margin-left: -173px !important;
+        }
 	}
-	@media (max-width: 1023px) {
-		.carousel.slide .item img {
-			margin-left: -170px;
-		}
-	}
+    @media (min-width: 1024px) {
+        .white {
+            .container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse {
+               width: 100% !important;
+            }
+            #navigation, .footer {
+                padding-left: 20px !important;
+                padding-right: 20px !important;
+            }
+            .carousel.slide .item img, .carousel-title, .carousel-text {
+                margin-left: 0 !important;
+            } 
+        }
+    }
 }
