--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -229,18 +229,9 @@
             margin-left: -173px !important;
         }
 	}
-    @media (min-width: 1024px) {
-        .white {
-            .container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse, .carousel.slide .item img {
-               width: 100% !important;
-            }
-            #navigation, .footer {
-                padding-left: 20px !important;
-                padding-right: 20px !important;
-            }
-            .carousel.slide .item img, .carousel-title, .carousel-text {
-                margin-left: 0 !important;
-            }
-        }
-    }
+	@media (max-width: 1023px) {
+		.carousel.slide .item img {
+			margin-left: -170px;
+		}
+	}
 }
