--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -236,6 +236,11 @@
             margin-left: -121px !important;
         }
     }
+    @media (max-width: 1023px) {
+        .white .carousel-title, .carousel-text {
+            margin-left: 0 !important;
+        }
+    }
     @media (min-width: 1024px) {
         .white {
             .container, .navbar .container, .portlet-dockbar .dockbar, #_145_navAccountControlsNavbarCollapse, .carousel.slide .item img {
